test/hello-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
spec:
  finalizers:
  - kubernetes
