test/hello-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  defaultBackend:
    service:
      name: hello-node
      port:
        number: 8443
  tls:
    - hosts:
        - argocd.drive.test.sunet.se 
      secretName: tls-secret
  
  rules:
  - host: argocd.drive.test.sunet.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: hello-node
            port:
              number: 8080
